--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.servlet.context-path=/api
-spring.datasource.url=jdbc:mysql://truckerapidb.ca9hjeqpyvyk.us-east-2.rds.amazonaws.com/trucker_db
+spring.datasource.url=jdbc:mysql://localhost:3306/trucker_db
 spring.datasource.username=root
 spring.datasource.password=arsha123A
 spring.jpa.hibernate.ddl-auto=validate
