--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/api
 spring.datasource.url=jdbc:mysql://localhost:3306/trucker_db
 spring.datasource.username=root
-spring.datasource.password=arsha123A
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
